--- a/index.html
+++ b/index.html
@@ -7,41 +7,107 @@
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns/dist/chartjs-adapter-date-fns.bundle.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-annotation"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-zoom@2.0.1"></script>
   <style>
-    body { font-family: Arial, sans-serif; margin: 20px; background: #f8f9fa; }
-    .main-title { text-align: center; color: #333; margin-bottom: 10px; font-size: 2.5em; }
-    .subtitle { text-align: center; color: #555; margin-bottom: 20px; font-size: 1.2em; }
-    .container { display: flex; flex-wrap: wrap; gap: 20px; max-width: 1400px; margin: 0 auto; }
-    .chart-area { flex: 3; min-width: 600px; height: 700px; position: relative; }
-    .sidebar { flex: 1; min-width: 320px; background: white; padding: 20px; border-radius: 12px; box-shadow: 0 4px 15px rgba(0,0,0,0.1); overflow-y: auto; max-height: 700px; }
-    .status-badge { font-size: 2.5em; margin: 20px 0; padding: 15px; border-radius: 12px; text-align: center; }
-    .price-item { margin: 15px 0; padding: 12px; border-bottom: 1px solid #eee; font-size: 1.1em; }
-    .price-item:last-child { border-bottom: none; }
-    .price-item a { color: #1e88e5; text-decoration: none; font-weight: bold; }
-    .price-item a:hover { text-decoration: underline; }
-    #alertBox, #sellAdvice, #previousCalls, #predictionAccuracy { margin: 20px auto; padding: 15px; border-radius: 8px; max-width: 800px; font-weight: bold; font-size: 1.2em; }
-    #sellAdvice { background: #ffebee; color: #c62828; }
-    #previousCalls { background: #f0f0f0; text-align: left; }
-    #predictionAccuracy { background: #f0f0f0; text-align: center; }
-    #confidenceGauge { width: 160px; height: 160px; margin: 20px auto; }
-    .phase-bar { height: 40px; width: 100%; margin: 15px 0; border-radius: 6px; overflow: hidden; display: flex; }
-    .phase-segment { flex: 1; position: relative; display: flex; align-items: center; justify-content: center; font-weight: bold; color: white; text-shadow: 1px 1px 2px black; }
-    .loading { color: #777; font-style: italic; text-align: center; }
+    body { 
+      font-family: 'Segoe UI', system-ui, sans-serif; 
+      margin: 0; 
+      background: #0d1117; 
+      color: #c9d1d9; 
+      line-height: 1.5; 
+    }
+    .main-title { 
+      text-align: center; 
+      color: #58a6ff; 
+      margin: 20px 0 5px; 
+      font-size: 2.8em; 
+      font-weight: 600; 
+    }
+    .subtitle { 
+      text-align: center; 
+      color: #8b949e; 
+      margin-bottom: 30px; 
+      font-size: 1.1em; 
+    }
+    .container { 
+      display: flex; 
+      flex-wrap: wrap; 
+      gap: 30px; 
+      max-width: 1500px; 
+      margin: 0 auto; 
+      padding: 0 20px; 
+    }
+    .chart-area { 
+      flex: 3; 
+      min-width: 700px; 
+      height: 750px; 
+      background: #161b22; 
+      border-radius: 12px; 
+      padding: 20px; 
+      box-shadow: 0 8px 32px rgba(0,0,0,0.4); 
+    }
+    .sidebar { 
+      flex: 1; 
+      min-width: 340px; 
+      background: #161b22; 
+      padding: 25px; 
+      border-radius: 12px; 
+      box-shadow: 0 8px 32px rgba(0,0,0,0.4); 
+      overflow-y: auto; 
+      max-height: 750px; 
+    }
+    .status-badge { 
+      font-size: 2.8em; 
+      margin: 0 0 25px; 
+      padding: 18px; 
+      border-radius: 12px; 
+      text-align: center; 
+      font-weight: bold; 
+      box-shadow: 0 4px 20px rgba(0,0,0,0.5); 
+    }
+    .price-item { 
+      margin: 18px 0; 
+      padding: 15px; 
+      border-radius: 8px; 
+      background: #21262d; 
+      transition: all 0.2s; 
+    }
+    .price-item:hover { 
+      transform: translateY(-2px); 
+      box-shadow: 0 6px 20px rgba(0,0,0,0.3); 
+    }
+    .price-item strong { color: #c9d1d9; }
+    .price-item a { color: #58a6ff; }
+    #alertBox, #sellAdvice, #previousCalls, #predictionAccuracy { 
+      margin: 25px 0; 
+      padding: 18px; 
+      border-radius: 10px; 
+      font-size: 1.3em; 
+      box-shadow: 0 4px 15px rgba(0,0,0,0.3); 
+    }
+    #sellAdvice { background: #2c0e0e; color: #ff6b6b; }
+    #previousCalls { background: #161b22; border: 1px solid #30363d; }
+    #predictionAccuracy { background: #161b22; border: 1px solid #30363d; text-align: center; }
+    #confidenceGauge { width: 180px; height: 180px; margin: 25px auto; }
+    .phase-bar { height: 36px; width: 100%; margin: 0 0 15px 0; border-radius: 6px; overflow: hidden; display: flex; box-shadow: 0 2px 10px rgba(0,0,0,0.5); }
+    .phase-segment { flex: 1; position: relative; display: flex; align-items: center; justify-content: center; font-weight: bold; color: white; text-shadow: 1px 1px 3px black; }
+    .loading { color: #8b949e; font-style: italic; text-align: center; margin: 20px 0; }
     @media (max-width: 900px) { .container { flex-direction: column; } .sidebar { order: 2; } .chart-area { order: 1; } }
   </style>
 </head>
 <body>
   <h1 class="main-title">Flow Cycle Index Dashboard</h1>
-  <p class="subtitle">One simple line shows when money is flowing to bottoms or tops — easy to understand in 5 minutes</p>
+  <p class="subtitle">Track money flows, phases, and signals in one clean view — from bottoms to blow-offs</p>
 
   <div class="container">
     <div class="chart-area">
       <div class="phase-bar">
-        <div class="phase-segment" style="background:#ff9800;">Euphoria</div>
-        <div class="phase-segment" style="background:#ffeb3b;">Thrill/Retail</div>
+        <div class="phase-segment" style="background:#ff6b6b;">Euphoria</div>
+        <div class="phase-segment" style="background:#ffab91;">Thrill/Retail</div>
         <div class="phase-segment" style="background:#8bc34a;">Belief/Breakout</div>
-        <div class="phase-segment" style="background:#ffeb3b;">Hope</div>
-        <div class="phase-segment" style="background:#f44336;">Current</div>
+        <div class="phase-segment" style="background:#fff176;">Hope</div>
+        <div class="phase-segment" style="background:#4caf50;">Current</div>
       </div>
       <canvas id="myChart"></canvas>
     </div>
@@ -49,7 +115,7 @@
     <div class="sidebar">
       <div id="statusBadge" class="status-badge">Loading...</div>
       <div id="sellAdvice">Sell Advice: Loading...</div>
-      <h3>Current Prices & Charts</h3>
+      <h3>Live Prices & Charts</h3>
       <div id="prices"><div class="loading">Loading live crypto prices...</div></div>
       <div id="previousCalls"><strong>Previous Calls:</strong> Loading...</div>
     </div>
@@ -63,27 +129,40 @@
     // === MAIN CHART ===
     const ctx = document.getElementById('myChart').getContext('2d');
 
-    const labels = ['2017-01', '2017-10', '2017-12', '2018-12', '2020-03', '2021-11', '2022-11', '2025-04', '2025-11', '2026-01', '2026-04', '2026-07', '2026-10', '2027-01', '2027-04', '2027-07', '2027-10', '2028-01']; // 2 years ahead
-    const predictorIndex = [40, 45, 95, 10, 10, 90, 15, 25, 10, 51, null, null, null, null, null, null, null, null]; // Historical only
-    const predictionData = [null, null, null, null, null, null, null, null, null, null, 70, 85, 95, 80, 50, 30, 15, 10]; // 2-year forecast example
+    const labels = ['2017-01', '2017-10', '2017-12', '2018-12', '2020-03', '2021-11', '2022-11', '2025-04', '2025-11', '2026-01', '2026-04', '2026-07', '2026-10', '2027-01', '2027-04', '2027-07', '2027-10', '2028-01'];
+    const predictorIndex = [40, 45, 95, 10, 10, 90, 15, 25, 10, 51, null, null, null, null, null, null, null, null];
+    const predictionData = [null, null, null, null, null, null, null, null, null, null, 70, 85, 95, 80, 50, 30, 15, 10];
 
     new Chart(ctx, {
       type: 'line',
       data: {
         labels: labels,
         datasets: [
-          { label: 'Flow Cycle Index (Historical)', data: predictorIndex, borderColor: 'blue', tension: 0.2, fill: false },
-          { label: 'Predicted Index (2-Year Forecast)', data: predictionData, borderColor: 'gray', borderDash: [5, 5], opacity: 0.6, tension: 0.2, fill: false }
+          { label: 'Flow Cycle Index (Historical)', data: predictorIndex, borderColor: '#58a6ff', tension: 0.2, fill: false },
+          { label: 'Predicted Index (2-Year Forecast)', data: predictionData, borderColor: '#8b949e', borderDash: [5, 5], opacity: 0.6, tension: 0.2, fill: false }
         ]
       },
       options: {
         responsive: true,
         maintainAspectRatio: false,
-        scales: { y: { min: 0, max: 100 } }
+        scales: { y: { min: 0, max: 100, grid: { color: '#30363d' } }, x: { grid: { color: '#30363d' } } },
+        plugins: {
+          zoom: {
+            zoom: { wheel: { enabled: true }, pinch: { enabled: true }, mode: 'x' },
+            pan: { enabled: true, mode: 'x' }
+          },
+          annotation: {
+            annotations: [
+              { type: 'box', xMin: '2026-04', xMax: '2026-07', yMin: 80, yMax: 100, backgroundColor: 'rgba(255,0,0,0.15)', borderColor: 'red' },
+              { type: 'label', content: 'Predicted Top Window', xValue: '2026-05', yValue: 90, backgroundColor: 'red', color: 'white' },
+              { type: 'label', content: 'Bottom', xValue: '2025-11-22', yValue: 10, backgroundColor: 'green', color: 'white' }
+            ]
+          }
+        }
       }
     });
 
-    // === LIVE CRYPTO PRICES ===
+    // === LIVE PRICES ===
     async function fetchLiveData() {
       try {
         const cgRes = await fetch('https://api.coingecko.com/api/v3/coins/markets?vs_currency=usd&ids=bitcoin,ethereum,solana,bnb&order=market_cap_desc&per_page=4&page=1&sparkline=false&price_change_percentage=24h');
@@ -105,13 +184,13 @@
           div.innerHTML = `
             <strong>${asset.name}</strong><br>
             <span style="font-size:1.4em;">${asset.price}</span> 
-            <span style="color:${asset.change.includes('+') ? 'green' : 'red'};">${asset.change}</span><br>
+            <span style="color:${asset.change.includes('+') ? '#56d364' : '#f85149'};">${asset.change}</span><br>
             <a href="${asset.link}" target="_blank">Live Chart →</a>
           `;
           pricesDiv.appendChild(div);
         });
       } catch (e) {
-        document.getElementById('prices').innerHTML = '<p style="color:red;">Live prices failed (refresh)</p>';
+        document.getElementById('prices').innerHTML = '<p style="color:#f85149;">Live prices failed (refresh page)</p>';
       }
     }
     fetchLiveData();
@@ -177,10 +256,10 @@
     }
 
     alertBox.innerHTML = `<strong>Flow Cycle Alert:</strong> ${msg}`;
-    alertBox.style.background = badgeColor === '#4caf50' ? '#e8f5e9' : badgeColor === '#f44336' ? '#ffebee' : '#fff';
+    alertBox.style.background = badgeColor === '#4caf50' ? '#0e4429' : badgeColor === '#f44336' ? '#2c0e0e' : '#161b22';
 
     sellAdvice.innerHTML = sellMsg;
-    sellAdvice.style.background = badgeColor === '#4caf50' ? '#e8f5e9' : badgeColor === '#f44336' ? '#ffebee' : '#fff3e0';
+    sellAdvice.style.background = badgeColor === '#4caf50' ? '#0e4429' : badgeColor === '#f44336' ? '#2c0e0e' : '#161b22';
 
     statusBadge.innerHTML = badge;
     statusBadge.style.background = badgeColor;
