--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
     } else if (currentIndex > 80) {
       msg = 'Sell Alert: Euphoria building – start selling.';
       actionMsg = 'What you should do right now: You should be 50–80% out now.';
-      badge = '🟠 START SELLING NOW';
+      badge = '🟠 START SELLING';
       badgeColor = '#ff9800';
       saveCall('Top Warning', currentIndex);
     }
